--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ permissions:
   contents: write # Grants permissions to write to the repo
 
 env:
-  GIT_USER_EMAIL: afifc.apcut@gmail.com
-  GIT_USER_NAME: afifcapcut112
+  GIT_USER_EMAIL: af.ifka.kageawa@gmail.com
+  GIT_USER_NAME: kakageawaaa
 
 jobs:
   ethereum_auto_commit:
